Login page structured

--- a/login.html
+++ b/login.html
@@ -12,30 +12,23 @@
     <nav>
         <ul>
             <li><a href="#">Inicio</a></li>
-            <li><a href="#">Historia</a></li>
-            <li>
-                <a>Cadastros</a>
-                <ul class="submenu">
-                    <li><a href="#">Cliente PF</a></li>
-                    <li><a href="#">Cliente PJ</a></li>
-                </ul>
-            </li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="#">Ver todas as tarefas</a></li>
+            <li><a href="#">Filtros</a></li>
         </ul>
     </nav>
 
     <div class="login-container">
-        <h2>Login</h2>
+        <h2>Realize seu login</h2>
         <form>
             <div class="input-group">
-                <label for="txtUsuario">Usuario</label>
-                <input type="text" id ="txtUsuario" name = "txtUsuario" placeholder="Digite seu usuário" required>
+                <label for="txtEmail">Email</label>
+                <input type="text" id ="txtEmail" name = "txtEmail" placeholder="Digite seu usuário" required>
             </div>
             <div class="input-group">
                 <label for="txtSenha">Senha</label>
                 <input type="password" id ="txtSenha" name = "txtSenha" placeholder="Digite sua senha" required>
             </div>
-
+            <a>Ainda não posui cadastro?<a href="#">Cadastre-se</a> </a>
             <button type="submit">Entrar</button>
         </form>
     </div>
