--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -26,7 +26,37 @@
 
     <div class="container">
         <div class="form-container">
-            <h2>Configurações do Usuário</h2>
+            <h2>Configurações Atuais</h2>
+            <div class="form-grid">
+                <div class="form-group">
+                    <label for="currentName">Nome</label>
+                    <input type="text" id="currentName" disabled>
+                </div>
+                <div class="form-group">
+                    <label for="currentEmail">Email</label>
+                    <input type="email" id="currentEmail" disabled>
+                </div>
+                <div class="form-group">
+                    <label for="currentCep">CEP</label>
+                    <input type="text" id="currentCep" disabled>
+                </div>
+                <div class="form-group">
+                    <label for="currentStreet">Rua</label>
+                    <input type="text" id="currentStreet" disabled>
+                </div>
+                <div class="form-group">
+                    <label for="currentNeighborhood">Bairro</label>
+                    <input type="text" id="currentNeighborhood" disabled>
+                </div>
+                <div class="form-group">
+                    <label for="currentCity">Cidade</label>
+                    <input type="text" id="currentCity" disabled>
+                </div>
+            </div>
+        </div>
+
+        <div class="form-container">
+            <h2>Novas Informações</h2>
             <form id="settingsForm">
                 <div class="form-grid">
                     <div class="form-group">
@@ -38,11 +68,20 @@
                         <input type="email" id="email" required>
                     </div>
                     <div class="form-group">
-                        <label for="theme">Tema</label>
-                        <select id="theme">
-                            <option value="light">Claro</option>
-                            <option value="dark">Escuro</option>
-                        </select>
+                        <label for="cep">CEP</label>
+                        <input type="text" id="cep" maxlength="8" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="street">Rua</label>
+                        <input type="text" id="street" readonly>
+                    </div>
+                    <div class="form-group">
+                        <label for="neighborhood">Bairro</label>
+                        <input type="text" id="neighborhood" readonly>
+                    </div>
+                    <div class="form-group">
+                        <label for="city">Cidade</label>
+                        <input type="text" id="city" readonly>
                     </div>
                 </div>
                 <div class="form-actions">
