--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Configurações - Gerenciador de Tarefas</title>
     <link rel="stylesheet" href="../../styles/global.css">
+    <link rel="stylesheet" href="settings.css">
 </head>
 <body>
     <nav class="nav-private">
