--- a/pages/tasks/viewall.html
+++ b/pages/tasks/viewall.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todas as Tarefas - Gerenciador de Tarefas</title>
     <link rel="stylesheet" href="../../styles/global.css">
+    <link rel="stylesheet" href="viewall.css">
 </head>
 <body>
     <nav class="nav-private">
