--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -21,19 +21,22 @@
             <form id="loginForm">
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" id="email" required>
+                    <input type="email" id="email">
+                    <span class="error-message"></span>
                 </div>
                 <div class="form-group">
                     <label for="password">Senha</label>
-                    <input type="password" id="password" required>
+                    <input type="password" id="password">
+                    <span class="error-message"></span>
                 </div>
-                <button type="submit" onclick="verifyLogin()">Entrar</button>
+                <button type="submit">Entrar</button>
                 <p class="register-link">
                     Não tem uma conta? <a href="../register/register.html">Cadastre-se</a>
                 </p>
             </form>
         </div>
     </div>
+
     <script src="login.js"></script>
 </body>
 </html>
