--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -1,63 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadastro - Gerenciador de Tarefas</title>
-    <link rel="stylesheet" href="../../styles/global.css">
-    <link rel="stylesheet" href="register.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../../styles/global.css" />
+    <link rel="stylesheet" href="register.css" />
+  </head>
+  <body>
     <nav class="nav-public">
-        <ul>
-            <li><a href="../login/login.html">Login</a></li>
-            <li><a href="../register/register.html" class="active">Cadastro</a></li>
-        </ul>
+      <ul>
+        <li><a href="../login/login.html">Login</a></li>
+        <li><a href="../register/register.html" class="active">Cadastro</a></li>
+      </ul>
     </nav>
 
     <div class="auth-container">
-        <div class="auth-box">
-            <h1>Cadastro</h1>
-            <form id="registerForm">
-                <div class="form-group">
-                    <label for="name">Nome</label>
-                    <input type="text" id="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="cep">CEP</label>
-                    <input type="text" id="cep" maxlength="8" required>
-                </div>
-                <div class="form-group">
-                    <label for="street">Rua</label>
-                    <input type="text" id="street" readonly>
-                </div>
-                <div class="form-group">
-                    <label for="neighborhood">Bairro</label>
-                    <input type="text" id="neighborhood" readonly>
-                </div>
-                <div class="form-group">
-                    <label for="city">Cidade</label>
-                    <input type="text" id="city" readonly>
-                </div>
-                <div class="form-group">
-                    <label for="password">Senha</label>
-                    <input type="password" id="password" required>
-                </div>
-                <div class="form-group">
-                    <label for="confirmPassword">Confirmar Senha</label>
-                    <input type="password" id="confirmPassword" required>
-                </div>
-                <button type="submit">Cadastrar</button>
-                <p class="login-link">
-                    Já tem uma conta? <a href="../login/login.html">Faça login</a>
-                </p>
-            </form>
-        </div>
+      <div class="auth-box">
+        <h1>Cadastro</h1>
+        <form id="registerForm">
+          <div class="form-group">
+            <label for="name">Nome</label>
+            <input type="text" id="name" />
+            <span class="error-message"></span>
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" />
+            <span class="error-message"></span>
+          </div>
+          <div class="form-group">
+            <label for="cep">CEP</label>
+            <input type="text" id="cep" maxlength="8" />
+            <span class="error-message"></span>
+          </div>
+          <div class="form-group">
+            <label for="password">Senha</label>
+            <input type="password" id="password" />
+            <span class="error-message"></span>
+          </div>
+          <div class="form-group">
+            <label for="confirmPassword">Confirmar Senha</label>
+            <input type="password" id="confirmPassword" />
+            <span class="error-message"></span>
+          </div>
+
+          <button type="submit">Cadastrar</button>
+          <p class="login-link">
+            Já tem uma conta? <a href="../login/login.html">Faça login</a>
+          </p>
+        </form>
+      </div>
     </div>
     <script src="register.js"></script>
-</body>
+  </body>
 </html>
