--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -62,27 +62,33 @@
                 <div class="form-grid">
                     <div class="form-group">
                         <label for="name">Nome</label>
-                        <input type="text" id="name" required>
+                        <input type="text" id="name">
+                        <span class="error-message"></span>
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" id="email" required>
+                        <input type="email" id="email">
+                        <span class="error-message"></span>
                     </div>
                     <div class="form-group">
                         <label for="cep">CEP</label>
-                        <input type="text" id="cep" maxlength="8" required>
+                        <input type="text" id="cep" maxlength="8">
+                        <span class="error-message"></span>
                     </div>
                     <div class="form-group">
                         <label for="street">Rua</label>
                         <input type="text" id="street" readonly>
+                        <span class="error-message"></span>
                     </div>
                     <div class="form-group">
                         <label for="neighborhood">Bairro</label>
                         <input type="text" id="neighborhood" readonly>
+                        <span class="error-message"></span>
                     </div>
                     <div class="form-group">
                         <label for="city">Cidade</label>
                         <input type="text" id="city" readonly>
+                        <span class="error-message"></span>
                     </div>
                 </div>
                 <div class="form-actions">
@@ -97,15 +103,18 @@
                 <div class="form-grid">
                     <div class="form-group">
                         <label for="currentPassword">Senha Atual</label>
-                        <input type="password" id="currentPassword" required>
+                        <input type="password" id="currentPassword">
+                        <span class="error-message"></span>
                     </div>
                     <div class="form-group">
                         <label for="newPassword">Nova Senha</label>
-                        <input type="password" id="newPassword" required>
+                        <input type="password" id="newPassword">
+                        <span class="error-message"></span>
                     </div>
                     <div class="form-group">
                         <label for="confirmPassword">Confirmar Nova Senha</label>
-                        <input type="password" id="confirmPassword" required>
+                        <input type="password" id="confirmPassword">
+                        <span class="error-message"></span>
                     </div>
                 </div>
                 <div class="form-actions">
