--- a/pages/tasks/viewall.html
+++ b/pages/tasks/viewall.html
@@ -1,113 +1,121 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todas as Tarefas - Gerenciador de Tarefas</title>
-    <link rel="stylesheet" href="../../styles/global.css">
-    <link rel="stylesheet" href="viewall.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../../styles/global.css" />
+    <link rel="stylesheet" href="viewall.css" />
+  </head>
+  <body>
     <nav class="nav-private">
-        <div class="nav-container">
-            <ul>
-                <li><a href="../home/home.html">Início</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropbtn active">Tarefas</a>
-                    <div class="dropdown-content">
-                        <a href="viewall.html" class="active">Ver todas</a>
-                        <a href="trash.html">Lixeira</a>
-                    </div>
-                </li>
-                <li><a href="../settings/settings.html">Configurações</a></li>
-            </ul>
-            <button id="logoutBtn" class="logout-btn">Sair</button>
-        </div>
+      <div class="nav-container">
+        <ul>
+          <li><a href="../home/home.html">Início</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropbtn active">Tarefas</a>
+            <div class="dropdown-content">
+              <a href="viewall.html" class="active">Ver todas</a>
+              <a href="trash.html">Lixeira</a>
+            </div>
+          </li>
+          <li><a href="../settings/settings.html">Configurações</a></li>
+        </ul>
+        <button id="logoutBtn" class="logout-btn">Sair</button>
+      </div>
     </nav>
 
     <div class="container">
-        <div class="form-container">
-            <h2>Nova Tarefa</h2>
-            <form id="newTaskForm">
-                <div class="form-grid">
-                    <div class="form-group">
-                        <label for="taskName">Nome da Tarefa</label>
-                        <input type="text" id="taskName" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="taskPriority">Prioridade</label>
-                        <select id="taskPriority" required>
-                            <option value="baixa">Baixa</option>
-                            <option value="regular">Regular</option>
-                            <option value="alta">Alta</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="taskStatus">Status</label>
-                        <select id="taskStatus" required>
-                            <option value="criada">Criada</option>
-                            <option value="andamento">Em Andamento</option>
-                            <option value="finalizada">Finalizada</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="taskDeadline">Prazo</label>
-                        <input type="date" id="taskDeadline" required>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="taskDescription">Descrição</label>
-                    <textarea id="taskDescription" required></textarea>
-                </div>
-                <div class="form-actions">
-                    <button type="submit">Adicionar Tarefa</button>
-                </div>
-            </form>
-        </div>
+      <div class="form-container">
+        <h2>Nova Tarefa</h2>
+        <form id="newTaskForm">
+          <div class="form-grid">
+            <div class="form-group">
+              <label for="taskName">Nome da Tarefa</label>
+              <input type="text" id="taskName" />
 
-        <div class="form-container">
-            <h2>Filtros</h2>
-            <div class="form-grid">
-                <div class="form-group">
-                    <label for="filterStatus">Status</label>
-                    <select id="filterStatus">
-                        <option value="">Todos</option>
-                        <option value="criada">Criada</option>
-                        <option value="andamento">Em Andamento</option>
-                        <option value="finalizada">Finalizada</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="filterPriority">Prioridade</label>
-                    <select id="filterPriority">
-                        <option value="">Todas</option>
-                        <option value="baixa">Baixa</option>
-                        <option value="regular">Regular</option>
-                        <option value="alta">Alta</option>
-                    </select>
-                </div>
+              <span class="error-message"></span>
             </div>
-        </div>
+            <div class="form-group">
+              <label for="taskPriority">Prioridade</label>
+              <select id="taskPriority">
+                <option value="">Selecione</option>
+                <option value="baixa">Baixa</option>
+                <option value="regular">Regular</option>
+                <option value="alta">Alta</option>
+              </select>
+              <span class="error-message"></span>
+            </div>
+            <div class="form-group">
+              <label for="taskStatus">Status</label>
+              <select id="taskStatus">
+                <option value="">Selecione</option>
+                <option value="criada">Criada</option>
+                <option value="andamento">Em Andamento</option>
+                <option value="finalizada">Finalizada</option>
+              </select>
+              <span class="error-message"></span>
+            </div>
+            <div class="form-group">
+              <label for="taskDeadline">Prazo</label>
+              <input type="date" id="taskDeadline" />
 
-        <div class="table-container">
-            <h2>Todas as Tarefas</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Nome</th>
-                        <th>Descrição</th>
-                        <th>Prioridade</th>
-                        <th>Status</th>
-                        <th>Prazo</th>
-                        <th>Ações</th>
-                    </tr>
-                </thead>
-                <tbody id="allTasksList">
-                    
-                </tbody>
-            </table>
+              <span class="error-message"></span>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="taskDescription">Descrição</label>
+            <textarea id="taskDescription"></textarea>
+
+            <span class="error-message"></span>
+          </div>
+          <div class="form-actions">
+            <button type="submit">Adicionar Tarefa</button>
+          </div>
+        </form>
+      </div>
+
+      <div class="form-container">
+        <h2>Filtros</h2>
+        <div class="form-grid">
+          <div class="form-group">
+            <label for="filterStatus">Status</label>
+            <select id="filterStatus">
+              <option value="">Todos</option>
+              <option value="criada">Criada</option>
+              <option value="andamento">Em Andamento</option>
+              <option value="finalizada">Finalizada</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="filterPriority">Prioridade</label>
+            <select id="filterPriority">
+              <option value="">Todas</option>
+              <option value="baixa">Baixa</option>
+              <option value="regular">Regular</option>
+              <option value="alta">Alta</option>
+            </select>
+          </div>
         </div>
+      </div>
+
+      <div class="table-container">
+        <h2>Todas as Tarefas</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Nome</th>
+              <th>Descrição</th>
+              <th>Prioridade</th>
+              <th>Status</th>
+              <th>Prazo</th>
+              <th>Ações</th>
+            </tr>
+          </thead>
+          <tbody id="allTasksList"></tbody>
+        </table>
+      </div>
     </div>
     <script src="viewall.js"></script>
-</body>
+  </body>
 </html>
