fix: change paths

--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -10,8 +10,8 @@
   <body>
     <nav class="nav-public">
       <ul>
-        <li><a href="../login/login.html">Login</a></li>
-        <li><a href="../register/register.html" class="active">Cadastro</a></li>
+        <li><a href="../../index.html">Login</a></li>
+        <li><a href="register.html" class="active">Cadastro</a></li>
       </ul>
     </nav>
 
@@ -47,7 +47,7 @@
 
           <button type="submit">Cadastrar</button>
           <p class="login-link">
-            Já tem uma conta? <a href="../login/login.html">Faça login</a>
+            Já tem uma conta? <a href="../../index.html">Faça login</a>
           </p>
         </form>
       </div>
