--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Gerenciador de Tarefas</title>
-    <link rel="stylesheet" href="../../styles/global.css">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="styles/global.css"">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="nav-public">
         <ul>
-            <li><a href="../login/login.html" class="active">Login</a></li>
-            <li><a href="../register/register.html">Cadastro</a></li>
+            <li><a href="index.html" class="active">Login</a></li>
+            <li><a href="pages/register/register.html">Cadastro</a></li>
         </ul>
     </nav>
 
@@ -31,12 +31,12 @@
                 </div>
                 <button type="submit">Entrar</button>
                 <p class="register-link">
-                    Não tem uma conta? <a href="../register/register.html">Cadastre-se</a>
+                    Não tem uma conta? <a href="pages/register/register.html">Cadastre-se</a>
                 </p>
             </form>
         </div>
     </div>
 
-    <script src="login.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
