--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -35,6 +35,21 @@
             <span class="error-message"></span>
           </div>
           <div class="form-group">
+            <label for="street">Rua</label>
+            <input type="text" id="street" readonly />
+            <span class="error-message"></span>
+          </div>
+          <div class="form-group">
+            <label for="neighborhood">Bairro</label>
+            <input type="text" id="neighborhood" readonly />
+            <span class="error-message"></span>
+          </div>
+          <div class="form-group">
+            <label for="city">Cidade</label>
+            <input type="text" id="city" readonly />
+            <span class="error-message"></span>
+          </div>
+          <div class="form-group">
             <label for="password">Senha</label>
             <input type="password" id="password" />
             <span class="error-message"></span>
